--- a/AI_project_server/AI_project_server/MainWindow.xaml
+++ b/AI_project_server/AI_project_server/MainWindow.xaml
@@ -17,7 +17,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Image x:Name="receive_image" Grid.Row="1" Margin="30,30,30,30"/>
-        <ListView x:Name="Log" Grid.Row="2" Grid.Column="0" Margin="10, 10, 10, 10">
+        <ListView x:Name="Result_Log" Grid.Row="2" Grid.Column="0" Margin="10, 10, 10, 10">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="No." Width="50"/>
@@ -28,8 +28,10 @@
             </ListView.View>
         </ListView>
                   
-        <Label x:Name="pass_count" Grid.Row="1" Grid.Column="1" Height="50" Margin="10,40,10,10"/>
+        <Label x:Name="pass_count" Grid.Row="1" Grid.Column="1" Height="50" Margin="10,40,10,20"/>
+        <Label Content="PASS" Grid.Row="1" Grid.Column="1" Height="25" Width="40" Margin="0,7,140,10" FontWeight="Bold"/>
         <Label x:Name="defect_count" Grid.Row="1" Grid.Column="1" Height="50" Margin="10,150,10,10"/>
+        <Label Content="DEFECT" Grid.Row="1" Grid.Column="1" Height="25" Width="60" Margin="10,152,127,37" FontWeight="Bold"/>
         <Label x:Name="title" Grid.ColumnSpan="2" Content="SERVER" FontSize="30" FontWeight="Bold"
                HorizontalAlignment="Center"/>
         <Button x:Name="open_btn" Grid.Row="1" Grid.Column="1" Height="50" Margin="10,10,10,140"
