--- a/AI_project_client/AI_project_client/MainWindow.xaml
+++ b/AI_project_client/AI_project_client/MainWindow.xaml
@@ -18,12 +18,10 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         
-        <Image x:Name="Cam" Grid.Row="1" Grid.Column="0" Grid.RowSpan="1" Grid.ColumnSpan="1" Margin="30,30,30,30"/>
+        <Image x:Name="Cam" Grid.Row="1" Grid.Column="0" Grid.RowSpan="1" Grid.ColumnSpan="1" Margin="30,30,30,30" Width="300" Height="250"/>
         <Button x:Name="server_connect" Content="서버 접속" Grid.Row="1" Grid.Column="2" Margin="10,10,10,250" Height="50"
                 FontSize="18" FontWeight="Bold" Click="Server_connect_Click"/>
         <Label x:Name="title" Grid.Row="0" Grid.Column="0" Grid.RowSpan="1" Grid.ColumnSpan="3" Content="Client"
                HorizontalAlignment="Center" FontSize="30" FontWeight="Bold"/>
-        <Label x:Name="result_label" Grid.Row="2" Grid.Column="2" Height="40" Margin="10,200,10,0"/>
-        <Label Content="검사결과" Grid.Row="2" Grid.Column="2" Height="25" Margin="0,130,0,0" FontSize="13" FontWeight="Bold"/>
     </Grid>
 </Window>
