--- a/AI_project_server/AI_project_server/MainWindow.xaml
+++ b/AI_project_server/AI_project_server/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AI_project_server"
         mc:Ignorable="d"
+        
         Title="MainWindow" Height="400" Width="600">
     <Grid>
         <Grid.RowDefinitions>
@@ -20,10 +21,10 @@
         <ListView x:Name="Result_Log" Grid.Row="2" Grid.Column="0" Margin="10, 10, 10, 10">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="No." Width="50"/>
-                    <GridViewColumn Header="Time" Width="180"/>
-                    <GridViewColumn Header="P/F" Width="50"/>
-                    <GridViewColumn Header="Cause" Width="90"/>
+                    <GridViewColumn Header="No." Width="50" DisplayMemberBinding="{Binding NO}"/>
+                    <GridViewColumn Header="Time" Width="180" DisplayMemberBinding="{Binding Date}"/>
+                    <GridViewColumn Header="P/F" Width="50" DisplayMemberBinding="{Binding Result}"/>
+                    <GridViewColumn Header="Cause" Width="90" DisplayMemberBinding="{Binding Cause}"/>
                 </GridView>
             </ListView.View>
         </ListView>
@@ -39,5 +40,6 @@
         <TextBox x:Name="IPstate" Grid.Row="2" Grid.Column="1" Margin="10,35,10,10"/>
         <Label x:Name="IP_state" Grid.Row="2" Grid.Column="1" Height="25" Margin="10,10,10,70" 
                Content="IP 접속현황" FontSize="13" FontWeight="Bold" HorizontalAlignment="Left"/>
+        
     </Grid>
 </Window>
